# qr-maker-rust

./: .gitignore  Cargo.toml
galois-field/: Cargo.toml
galois-field/src/: lib.rs
polynomial-arithmetic/: Cargo.toml
polynomial-arithmetic/src/: int_mod.rs  lib.rs
qr-generator/: Cargo.toml
qr-generator/src/: encoder.rs  encoding_modes.rs  error_correction.rs  image_builder.rs  lib.rs  qr_errors.rs  qr_types.rs  sizer.rs
reed-solomon/: Cargo.toml
reed-solomon/src/: lib.rs
src/: cli.rs  main.rs
