[package]
name = "qr-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
image = "0.24.5"
itertools = "0.11.0"
reed-solomon = { version = "0.1.0", path = "../reed-solomon" }
polynomial-arithmetic = { version = "0.1.0", path = "../polynomial-arithmetic" }
