[package]
name = "reed-solomon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
galois-field = { version = "0.1.0", path = "../galois-field" }
polynomial-arithmetic = { version = "0.1.0", path = "../polynomial-arithmetic" }

[dev-dependencies]
rand = "0.8.5"
